[Enhancement][Sean] Show crew avatar stack and viewer tap-in status on drop cards
